Volunteer table is now ordererd by "Active" and then by "Position". The email field no longer overlaps the active field.

--- a/CCVolunteerScheduler/CCVolunteerScheduler/Content/Site.css
+++ b/CCVolunteerScheduler/CCVolunteerScheduler/Content/Site.css
@@ -94,6 +94,13 @@
     margin: 10px;
 }
 
+.rmLeftBorder {
+    border-left: hidden !important;
+}
+
+.rmRightBorder {
+    border-right: hidden !important;
+}
 label {
     text-align: right;
     margin-right: 10px;
